--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+
+:root {
+    --box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+        rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    text-decoration: none;
+    list-style: none;
+}
+
+/* themes */
+.light {
+    background-color: #ffffff;
+    transition: all 500ms;
+}
+
+.medium {
+    background-color: #efefef;
+    transition: all 500ms;
+}
+
+.dark {
+    background-color: #15202b;
+    transition: all 500ms;
+}
+
+.gOne {
+    background: linear-gradient(
+        90deg,
+        hsla(191, 75%, 60%, 1) 0%,
+        hsla(248, 87%, 36%, 1) 100%
+    );
+    transition: all 500ms;
+}
+.gTwo {
+    background: linear-gradient(235deg, #ffffff 0%, #000f25 100%),
+        linear-gradient(180deg, #6100ff 0%, #000000 100%),
+        linear-gradient(
+            235deg,
+            #ffa3ac 0%,
+            #ffa3ac 40%,
+            #00043c calc(40% + 1px),
+            #00043c 60%,
+            #005d6c calc(60% + 1px),
+            #005d6c 70%,
+            #00c9b1 calc(70% + 1px),
+            #00c9b1 100%
+        ),
+        linear-gradient(
+            125deg,
+            #ffa3ac 0%,
+            #ffa3ac 40%,
+            #00043c calc(40% + 1px),
+            #00043c 60%,
+            #005d6c calc(60% + 1px),
+            #005d6c 70%,
+            #00c9b1 calc(70% + 1px),
+            #00c9b1 100%
+        );
+    background-blend-mode: soft-light, screen, darken, normal;
+}
+
+.gThree {
+    background: linear-gradient(125deg, #ffffff 0%, #000000 100%),
+        linear-gradient(
+            200deg,
+            #ffd9e8 0%,
+            #ffd9e8 50%,
+            #de95ba calc(50% + 1px),
+            #de95ba 60%,
+            #7f4a88 calc(60% + 1px),
+            #7f4a88 75%,
+            #4a266a calc(75% + 1px),
+            #4a266a 100%
+        ),
+        linear-gradient(
+            113deg,
+            #ffd9e8 0%,
+            #ffd9e8 40%,
+            #de95ba calc(40% + 1px),
+            #de95ba 50%,
+            #7f4a88 calc(50% + 1px),
+            #7f4a88 70%,
+            #4a266a calc(70% + 1px),
+            #4a266a 100%
+        );
+    background-blend-mode: overlay, overlay, normal;
 }
