--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ header .logo img {
 }
 
 header .logo span {
-    font-size: 22px;
+    font-size: 30px;
     margin-left: 7px;
     cursor: pointer;
     color: #525252;
@@ -105,6 +105,7 @@ header .themeSelector .activeTheme {
     border-bottom: 1px solid #dfdfdf;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .showTask div.head div {
